:sparkles: (心理师功能),完成了心理师部分功能实现,如申请,预约,档期等等

--- a/使用教程.md
+++ b/使用教程.md
@@ -29,22 +29,27 @@
 - Server API（Koa）：<http://localhost:3001>
 - MySQL：`localhost:3306`
 
-## 本地运行速查
-1. **准备 MySQL**：可直接使用本地 MySQL 或 `docker run --name campus-mysql -p 3306:3306 -e MYSQL_ROOT_PASSWORD=campus -d mysql:8`. 服务启动后，后端会在第一次连接时自动创建 `campus_chain` 数据库与 `users` 表。
+## 本地运行教程
+1. **准备 MySQL  node.js  cmd里输入mysql -v和node - v检查配置**  
+需要更改packages\server-api\.env的代码内容为你实际的mysql密码 如实际密码为88888888
+改为  mysql://root:88888888@localhost:3306/campus_chain
 2. **启动后端**
-   ```bash
    cd packages/server-api
-   bun install
-   cp .env.example .env # 根据需要调整
+   powershell -Command "(New-Object System.Net.ServicePointManager).SecurityProtocol = 'Tls12'; iwr https://bun.sh/install.ps1|iex"
+   bun install  # 这步可能需要重启
    bun run dev
-   ```
+
 3. **启动前端**
-   ```bash
    cd packages/web-portal
-   bun install
-   cp .env.example .env # 若未配置则默认指向 http://localhost:3001
+   bun install  # 这步可能需要重启   也可能需要和上面一样先powershell -Command "(New-Object ………………
    bun run dev
-   ```
+
+第二次加载便不需要下载依赖和配置了，只需要开启两个终端，分别：
+   cd packages/server-api
+   bun run dev
+
+   cd packages/web-portal
+   bun run dev
 
 前后端分别监听 3000/3001 端口，可在本地直接访问 <http://localhost:3000> 体验登录/注册流程，表单会调用 `server-api` 的 `/api/auth/*` 接口，并通过自动初始化的 MySQL 完成数据落库。
 
